[tool.poetry]
name = "lavender-logging"
version = "0.1.0"
description = "An opinionated logger and configuration system."
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "lavender", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
